// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/left-sidebar should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-return-to-admin-console "
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M11.9 14H2.1C.9 14 0 13.1 0 11.9V2.1C0 .9.9 0 2.1 0h9.8c1.2 0 2.1.9 2.1 2.1v9.8c0 1.2-.9 2.1-2.1 2.1zM8.2 4.1L7.1 3 3 7l4.1 4 1.1-1.1-2.1-2.1H14V6.2H6.1l2.1-2.1z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 1`] = `
<AccessibleSVG
  className="icon-return-to-admin-console "
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M11.9 14H2.1C.9 14 0 13.1 0 11.9V2.1C0 .9.9 0 2.1 0h9.8c1.2 0 2.1.9 2.1 2.1v9.8c0 1.2-.9 2.1-2.1 2.1zM8.2 4.1L7.1 3 3 7l4.1 4 1.1-1.1-2.1-2.1H14V6.2H6.1l2.1-2.1z"
    fill="#abcdef"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 1`] = `
<AccessibleSVG
  className="icon-return-to-admin-console "
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    d="M11.9 14H2.1C.9 14 0 13.1 0 11.9V2.1C0 .9.9 0 2.1 0h9.8c1.2 0 2.1.9 2.1 2.1v9.8c0 1.2-.9 2.1-2.1 2.1zM8.2 4.1L7.1 3 3 7l4.1 4 1.1-1.1-2.1-2.1H14V6.2H6.1l2.1-2.1z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 1`] = `
<AccessibleSVG
  className="icon-return-to-admin-console "
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M11.9 14H2.1C.9 14 0 13.1 0 11.9V2.1C0 .9.9 0 2.1 0h9.8c1.2 0 2.1.9 2.1 2.1v9.8c0 1.2-.9 2.1-2.1 2.1zM8.2 4.1L7.1 3 3 7l4.1 4 1.1-1.1-2.1-2.1H14V6.2H6.1l2.1-2.1z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;
